document_topic_definition_with_ai/k8s/streamlit.yaml
# streamlit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: document-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: k8s-registry/streamlit:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  namespace: document-analyzer
spec:
  type: NodePort
  selector:
    app: streamlit
  ports:
  - port: 8501
    targetPort: 8501
    nodePort: 30085
